# sqlalchemy-migrate

./: .gitignore  .gitreview  .hgignore  .hgsigs  .hgtags  .testr.conf  CHANGELOG  MANIFEST.in  README  README.md  README.rst  TODO  build-req.pip  requirements.txt  setup.cfg  setup.py  test-req.pip  test-requirements-py2.txt  test-requirements-py3.txt  test-requirements.pip  test-requirements.txt  test_db.cfg  test_db.cfg.tmpl  test_db_py3.cfg  tox.ini
doc/source/: api.rst  changelog.rst  changeset.rst  conf.py  credits.rst  download.rst  faq.rst  glossary.rst  index.rst  versioning.rst
docs/: api.rst  changelog.rst  changeset.rst  conf.py  credits.rst  download.rst  index.rst  tools.rst  versioning.rst
docs/historical/: ProjectDesignDecisionsAutomation.trac  ProjectDesignDecisionsScriptFormat.trac  ProjectGoals.trac  RepositoryFormat2.trac
docs/theme/: layout.css
migrate/: __init__.py  run.py
migrate/changeset/: __init__.py  ansisql.py  constraint.py  exceptions.py  schema.py  util.py
migrate/tests/: __init__.py
migrate/versioning/: __init__.py  api.py  cfgparse.py  exceptions.py  genmodel.py  migrate_repository.py  pathed.py  repository.py  schema.py  schemadiff.py  shell.py  template.py  version.py
shell/: migrate
test/changeset/: test_changeset.py  test_constraint.py
test/fixture/: __init__.py  base.py  database.py  models.py  pathed.py  shell.py
test/integrated/: test_docs.py
test/versioning/: test_api.py  test_cfgparse.py  test_database.py  test_genmodel.py  test_keyedinstance.py  test_pathed.py  (+9 more)
tests/: __init__.py
tools/: pretty_tox.sh
(+81 files in other folders)
