[metadata]
name = sqlalchemy-migrate
summary = Database schema migration for SQLAlchemy
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    migrate

[entry_points]
console_scripts =
    migrate = migrate.versioning.shell:main
    migrate-repository = migrate.versioning.migrate_repository:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
